# dwm-status

./: .editorconfig  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  default.nix  dwm-status.nix  flake.nix  release-hook.sh  release.toml  renovate.json  rustfmt.toml  shell.nix
.github/workflows/: ci.yml  update-nur-packages.yml
examples/default-settings/: defaults.hjson  defaults.json  defaults.toml  defaults.yml
examples/icon-settings/: nerd-font.toml
examples/settings/: defaults.hjson  defaults.json  defaults.toml  defaults.yml
nix/: sources.json
src/: async.rs  communication.rs  conf.rs  error.rs  expression_parser.rs  feature.rs  features.rs  io.rs  lib.rs  macros.rs  main.rs  resume.rs  settings.rs  status_bar.rs  system.rs  utils.rs  wrapper.rs
src/data/: audio.rs  backlight.rs  battery.rs  mod.rs  time.rs
src/dbus/: data.rs  mod.rs
src/features/: audio.rs  backlight.rs  battery.rs  cpu_load.rs  keymap.rs  mod.rs  network.rs  time.rs
src/features/audio/: builder.rs  config.rs  data.rs  feature.rs  mod.rs  notifier.rs  updater.rs
src/features/backlight/: builder.rs  config.rs  data.rs  device.rs  feature.rs  mod.rs  notifier.rs  updater.rs
src/features/battery/: ac_adapter.rs  builder.rs  config.rs  data.rs  dbus.rs  device.rs  feature.rs  manager.rs  mod.rs  notifier.rs  updater.rs  util.rs
src/features/cpu_load/: config.rs  data.rs  feature.rs  mod.rs  notifier.rs  updater.rs
src/features/keymap/: config.rs  data.rs  notifier.rs  updater.rs
src/features/network/: config.rs  data.rs  mod.rs  notifier.rs  updater.rs
src/features/time/: builder.rs  config.rs  data.rs  feature.rs  mod.rs  notifier.rs  updater.rs
src/test_utils/: config.rs  log.rs  mod.rs
src/wrapper/: battery.rs  channel.rs  config.rs  date_time.rs  dbus.rs  file.rs  inotify.rs  libnotify.rs  log.rs  mod.rs  process.rs  termination.rs  thread.rs  uom.rs  xsetroot.rs
src/wrapper/dbus/: data.rs  message.rs  mod.rs
