[package]
authors = ["Tobias Happ <tobias.happ@gmx.de>"]
description = "Displays system information for dwm status bar."
keywords = ["dwm", "dwm-status"]
license = "MIT"
name = "dwm-status"
readme = "README.md"
repository = "https://github.com/Gerschtli/dwm-status"
version = "1.8.0"
edition = "2021"
[badges.travis-ci]
branch = "master"
repository = "Gerschtli/dwm-status"

[dependencies]
battery = "0.7.8"
chrono = "0.4.22"
clap = { version = "3.2.22", features = [ "cargo" ] }
config = "0.11.0"
dbus = "0.8.4"
inotify = "0.10.0"
libnotify = "1.0.3"
log = "0.4.17"
serde = "1.0.147"
serde_derive = "1.0.147"
simplelog = "0.12.0"
uom = { version = "0.30.0", features = ["autoconvert", "f32", "si"] }
glob = "0.3.0"

[dependencies.ctrlc]
features = ["termination"]
version = "3.2.3"

[dependencies.mocktopus]
optional = true
version = "0.7.11"

[dependencies.x11]
features = ["xlib"]
version = "2.20.0"

[dev-dependencies]
hamcrest2 = "0.3.0"

[features]
mocking = ["mocktopus"]
