[package]
authors = ["Tobias Happ <tobias.happ@gmx.de>"]
description = "Displays system information for dwm status bar."
keywords = ["dwm", "dwm-status"]
license = "MIT"
name = "dwm-status"
readme = "README.md"
repository = "https://github.com/Gerschtli/dwm-status"
version = "1.10.0"
edition = "2021"
[badges.travis-ci]
branch = "master"
repository = "Gerschtli/dwm-status"

[dependencies]
battery = "0.7.8"
chrono = "0.4.42"
clap = { version = "4.5.48", features = [ "derive" ] }
config = "0.11.0"
dbus = "0.8.4"
inotify = "0.11.0"
libnotify = "1.0.3"
log = "0.4.28"
serde = "1.0.228"
serde_derive = "1.0.228"
simplelog = "0.12.2"
uom = { version = "0.30.0", features = ["autoconvert", "f32", "si"] }
glob = "0.3.3"
serde_json = "1.0.145"
regex = "1.11.3"
evalexpr = "12.0.2"

[dependencies.ctrlc]
features = ["termination"]
version = "3.5.0"

[dependencies.mocktopus]
optional = true
version = "0.8.0"

[dependencies.x11]
features = ["xlib"]
version = "2.21.0"

[dev-dependencies]
hamcrest2 = "0.3.0"

[features]
mocking = ["mocktopus"]
